--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,6 @@
     "quotes": ["error", "double"],
     "indent": ["error", 2],
     "no-tabs": "error",
-    "max-len": [
-      "error",
-      { "code": 80, "ignoreUrls": true, "ignoreStrings": true }
-    ]
+    "max-len": ["error", { "code": 90, "ignoreUrls": true, "ignoreStrings": true }]
   }
 }
